z-index fix

--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -1,6 +1,6 @@
 .header {
     position: relative;
-    z-index: 1000;
+    // z-index: 1000;
     padding: rem(16px) rem(20px);
     margin-bottom: rem(24px);
     display: grid;
